<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:id="@+id/mainRelative">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll1"
            android:background="@drawable/paper_01">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView1"
                android:src="@drawable/ic_launcher"
                android:cropToPadding="false"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:contentDescription="@string/img1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/ic_launcher"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:contentDescription="@string/img2" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll2"
            android:layout_below="@+id/ll1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="false"
            android:background="@drawable/paper_02">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_launcher"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:contentDescription="@string/img3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/ic_launcher"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:cropToPadding="false"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:contentDescription="@string/img4" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rl2"
        android:layout_below="@+id/rl1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSend"
            android:id="@+id/bSend"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="bSend"/>
    </RelativeLayout>

</RelativeLayout>